# HAPI

./: .gitignore  README.md  ReadMe  changelog
Chai3DRenderer/: Chai3DRenderer.cpp  Chai3DRenderer.h  Chai3DRendererConfig.h
Chai3DRenderer/include/: Chai3DRenderer.h
Chai3DRenderer/src/: Chai3DRenderer.cpp
HAPIDemo/: ForceFieldWidgetsPage.cpp  ForceFieldWidgetsPage.h  HAPIDemo.cpp  HAPIDemo.h  HapticShapeConstraintWidgetsPage.cpp  HapticShapeConstraintWidgetsPage.h  PositionFunctionWidgetsPage.cpp  PositionFunctionWidgetsPage.h  SpringWidgetsPage.cpp  SpringWidgetsPage.h  TimeFunctionWidgetsPage.cpp  ViscosityWidgetsPage.cpp
OpenHapticsRenderer/: Config.h  HLCustomObject.cpp  HLCustomObject.h  HLDepthBufferShape.cpp  HLDepthBufferShape.h  HLFeedbackShape.cpp  HLFeedbackShape.h  OpenHapticsRenderer.cpp  OpenHapticsRenderer.h
OpenHapticsRenderer/include/: HLCustomObject.h  HLFeedbackShape.h  OpenHapticsRenderer.h
OpenHapticsRenderer/src/: HLCustomObject.cpp  HLDepthBufferShape.cpp  HLFeedbackShape.cpp  OpenHapticsRenderer.cpp
doc/: Doxyfile  Doxyfile_HAPI_release  Makefile  design.tex  devicehandling.tex  forceeffects.tex  geometries.tex  highlight.css  highlight_theme.tex  introduction.tex  main.bbl  main.tex  manual.cls  overview.tex  references.bib  renderers.tex  threads.tex
doc/examples/: HapticForceField.cpp  PeriodicThreadCallbacks_cpp.cpp  SimpleThreadPrintLock_cpp.cpp  SimpleThreadPrint_cpp.cpp  constant_force.cpp  constant_force.tex  feedback_buffer_collector.cpp  hapticsDeviceRegistration_cpp.cpp  hapticsDeviceRegistration_cpp.tex  hapticsDeviceRegistration_h.cpp  hapticsDeviceRegistration_h.tex  surface_example_h.cpp  transfer_objects.cpp  transfer_objects.tex
doc/images/: coordsystems.eps  coordsystems.fig  hapticsthread.eps  hapticsthread.fig  layering.eps  layering.fig  layering2.eps  layering2.fig  proxyfinger.eps  proxyfinger.fig  surface.eps  surface.fig  threads.eps  threads.fig
examples/: CMakeLists.txt  HAPIExamples_vs2003.sln  HAPIExamples_vs2005.sln
examples/DirectXExample/src/: main.cpp
examples/FeedbackBufferCollectorExample/: FeedbackBufferCollectorExample.cpp
examples/HAPIDemo/: ForceFieldWidgetsPage.cpp  ForceFieldWidgetsPage.h  HAPIDemo.cpp  HAPIDemo.h  HapticShapeConstraintWidgetsPage.cpp  HapticShapeConstraintWidgetsPage.h  PositionFunctionWidgetsPage.cpp  PositionFunctionWidgetsPage.h  SpringWidgetsPage.cpp  SpringWidgetsPage.h  TimeFunctionWidgetsPage.cpp  TimeFunctionWidgetsPage.h  ViscosityWidgetsPage.cpp  ViscosityWidgetsPage.h
examples/SpringExample/: SpringExample.cpp
examples/SurfaceExample/: SurfaceDemo.cpp
examples/ThreadExamples/PeriodicThreadCallbacks/: PeriodicThreadCallbacks.cpp
examples/ThreadExamples/SimpleThreadPrint/: SimpleThreadPrint.cpp
examples/ThreadExamples/SimpleThreadPrintLock/: SimpleThreadPrintLock.cpp
include/HAPI/: AnyHapticsDevice.h  ClutchedHapticsDevice.h  CollisionObjects.h  DepthMapHAPISurface.h  DepthMapSurface.h  DeviceLog.h  EntactHapticsDevice.h  FalconHapticsDevice.h  FeedbackBufferCollector.h  ForceDimensionHapticsDevice.h  FrictionSurface.h  GodObjectRenderer.h  HAPI.cmake  HAPI.h  HAPIForceEffect.h  HAPIFrictionSurface.h  HAPIFunctionObject.h  HAPIGLShape.h  HAPIHapticObject.h  HAPIHapticShape.h  HAPIHapticsDevice.h  HAPIHapticsRenderer.h  HAPIProxyBasedRenderer.h  HAPIShapeRenderOptions.h  HAPISurfaceObject.h  HAPITypes.h  HAPIVariableDepthSurface.h  HLThread.h  HapticForceField.h  HapticLineSet.h  HapticMasterDevice.h  HapticPointSet.h  HapticPositionFunctionEffect.h  HapticSpring.h  (+26 more)
src/: AnyHapticsDevice.cpp  AnyHapticsDevice.h  AutoPtrVector.h  AutoRef.h  AutoRefVector.h  Chai3DRenderer.cpp  Chai3DRenderer.h  ClutchedHapticsDevice.cpp  CollisionObjects.cpp  CollisionObjects.h  Console.cpp  Console.h  DHDHapticsDevice.cpp  DHDHapticsDevice.h  DepthMapHAPISurface.cpp  DepthMapHAPISurface.h  DepthMapSurface.cpp  DeviceLog.cpp  EntactHapticsDevice.cpp  Exception.cpp  Exception.h  FalconHapticsDevice.cpp  FalconHapticsDevice.h  FeedbackBufferCollector.cpp  FeedbackBufferCollector.h  ForceDimensionHapticsDevice.cpp  ForceDimensionHapticsDevice.h  FrictionSurface.cpp  FrictionSurface.h  GodObjectRenderer.cpp  GodObjectRenderer.h  H3DMath.h  H3DTypes.h  HAPI.cpp  HAPI.h  HAPIForceEffect.cpp  HAPIForceEffect.h  HAPIFrictionSurface.cpp  HAPIFunctionObject.h  HAPIGLShape.h  (+93 more)
(+31 files in other folders)
